%% ============================================================================
%% 04-palantir-state-machine.mmd — Palantir legion state machine.
%% `,palantir` launches one legion per effort: a tmux session on a `,w` worktree.
%% Window 0 has coordinator + deterministic supervisor; interactive role stages own windows.
%% Core deployed runtime lives in home/exact_lib/exact_,palantir/ (12).
%% ============================================================================
stateDiagram-v2
    direction TB

    [*] --> summon : ,palantir summon
    summon --> triage : manifest.json + tmux session + command window ready
    summon --> summon : pane not ready / composer non-empty; retry

    triage --> diagnose : triage requests diagnosis
    triage --> implement : direct-change path
    diagnose --> investigate : diagnosis needs evidence
    investigate --> implement : root cause + acceptance criteria recorded
    diagnose --> implement : diagnosis already sufficient

    implement --> adversarial_review : stages/implement.result.json accepted
    adversarial_review --> implement : blockers>0 & budget remains
    adversarial_review --> holding : blockers>0 & budget exhausted
    adversarial_review --> verify : blockers=0
    verify --> cleared_for_human : criteria checks exit 0 & blockers=0
    verify --> implement : checks fail & retry budget remains
    verify --> holding : checks fail & retry budget exhausted

    state resume <<choice>>
    holding --> resume : ,palantir answer uses stored resume_stage
    resume --> triage : triage
    resume --> diagnose : diagnose
    resume --> investigate : investigate
    resume --> implement : implement / exhausted retry budget
    resume --> adversarial_review : adversarial_review
    resume --> verify : verify
    holding --> banished : ,palantir banish
    cleared_for_human --> banished : closeout packet persisted + grant teardown
    banished --> [*] : supervisor/session stopped; owned clean worktree removed

    note right of summon
        State root:
        ~/.local/state/palantir/legions/<id>/manifest.json.
        One legion = one effort = one tmux session on one `,w` worktree.
        window 0 "command" = coordinator agent pane + deterministic supervisor pane.
        Locks refuse nonexistent legions (no lock-only debris dirs);
        manifest-less dirs surface corrupt and banish removes them fail-closed.
    end note

    note right of implement
        Stage panes are interactive agent roles:
        copilot / claude / pi / opencode selected from
        ~/.config/palantir/config.toml.
        Each stage writes stages/<stage>.result.json as the handshake.
        The supervisor reads JSON handshakes; LLMs never drive transitions.
        Stage baseline/completion snapshots derive changed-path provenance
        for the successor and adversarial review.
    end note

    note right of adversarial_review
        Deterministic guard:
        adversarial-review model family != implement model family.
        Cleared-for-human is impossible unless verify is green
        and the review blocker count is zero.
    end note

    note right of verify
        machine.py transition tables own legal moves.
        verify runs criteria checks as commands; exit 0 = green.
        Every return of implement to work (failed verify or review
        blockers) spends the shared max_implement_attempts budget,
        then parks in holding.
    end note

    note right of holding
        supervisor.py loop:
        read manifest → classify pane with composer.py
        empty → inject; pending / busy / unknown → wait + retry.
        pending_actions survive side-effect failure and supervisor restart.
        pending_wakes survive blocked panes; dedupe suppresses only
        the same unresolved condition.
        Questions, triage rejections, and exhausted retry budgets store
        the stage that `,palantir answer` resumes.
        dashboard.py renders the textual popup via tmux prefix+A;
        it shows age/transport/queue/criteria/teardown health and
        requires typed confirmation for close actions.
        statusline.py counts active/holding/cleared stages plus
        transport errors (T), teardown orphans (O), and closed
        legions with an unrouted memory packet (U), plus corrupt state (E).
    end note

    note right of cleared_for_human
        Palantir is strictly opt-in for ordinary chat sessions;
        only an explicit user request permits a propose-only summon.
        grant / banish are human-only, summon refuses legion panes:
        agent panes carry PALANTIR_AGENT_ROLE and are refused
        (no recursive legions).
        Grant preflights teardown, persists memory-routing.json,
        stops the supervisor/session, and removes only an owned
        clean worktree. Closeout packet routes:
        durable verified learnings → ,ai-kb;
        effort worklog/spec → /tmp/specs;
        repo-intrinsic conventions → repo AGENTS.md.
        The packet stays flagged (attention U) until the human
        marks it executed with `,palantir routed <id>`.
    end note
